@@ -1,5 +1,8 @@
 2008-03-05  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Removed prefix space from
+	translatable string (bug #514232).
+
 	* src/lib/accerciser/accessible_treeview.py: 
 	* plugindata/validate/basic.py: 
 	* plugins/interface_view.glade: Added translator comments.
